# hs-leveldb

./: .gitignore  .travis.yml  AUTHORS.txt  CONTRIBUTING.md  LICENSE.txt  README.md  configure.ac  index.html  leveldb.cabal  makefile  params.json
examples/: ex1.hs  ffi_test.hs  hl_test.hs  io_test.hs  makefile  stress.hs
src/Database/: LevelDB.hs  LevelDB.hsc
src/Database/LevelDB/: FFI.hsc  IO.hs
src/cbits/leveldb/: README.md
tests/: Properties.hs
util/: clean_autoconf.sh  gen_cpp_src_list.sh
