name:                leveldb
version:             0.1
synopsis:            Haskell bindings to LevelDB
description:         Haskell bindings to LevelDB
homepage:            http://thoughtpolice.github.com/hs-leveldb
bug-reports:         http://github.com/thoughtpolice/hs-leveldb/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Database
build-type:          Configure
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4

extra-source-files:
  AUTHORS.txt
  README.md
  examples/*.hs
  tests/*.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-leveldb.git

library
  exposed-modules:
    Database.LevelDB
  
  build-depends:
    base       >= 4,
    bytestring >= 0.9

  if os(linux)
    cc-options:       -DOS_LINUX
  if os(darwin)
    cc-options:       -DOS_MACOSX
  if os(solaris)
    cc-options:       -D_REENTRANT -DOS_SOLARIS
  if os(freebsd)
    cc-options:       -D_REENTRANT -DOS_FREEBSD

  hs-source-dirs: src
  extra-libraries: stdc++

  cc-options:         -fno-builtin-memcmp
  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs -Werror
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    QuickCheck     == 2.4.*,
    test-framework == 0.4.*,
    test-framework-quickcheck2 == 0.2.*,
    leveldb

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010
