name:                leveldb
version:             0.1
synopsis:            Haskell bindings to LevelDB
description:         Haskell bindings to LevelDB
homepage:            http://thoughtpolice.github.com/hs-leveldb
bug-reports:         http://github.com/thoughtpolice/hs-leveldb/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Database
build-type:          Configure
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4

extra-source-files:
  AUTHORS.txt
  README.md
  src/cbits/leveldb/db/*.cc
  src/cbits/leveldb/db/*.h
  src/cbits/leveldb/table/*.h
  src/cbits/leveldb/table/*.cc
  src/cbits/leveldb/util/*.h
  src/cbits/leveldb/util/*.cc
  src/cbits/leveldb/include/leveldb/*.h
  examples/*.hs
  tests/*.hs
  
source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-leveldb.git

library
  exposed-modules:
    Database.LevelDB
  
  build-depends:
    base       >= 4,
    bytestring >= 0.9

  cc-options:         -fno-builtin-memcmp -DLEVELDB_PLATFORM_POSIX

  if os(linux)
    cc-options:       -DOS_LINUX
  if os(darwin)
    cc-options:       -DOS_MACOSX
  if os(solaris)
    cc-options:       -D_REENTRANT -DOS_SOLARIS
  if os(freebsd)
    cc-options:       -D_REENTRANT -DOS_FREEBSD

  hs-source-dirs: src
  extra-libraries: stdc++
  include-dirs:
    src/cbits/leveldb
    src/cbits/leveldb/include

  -- why does cabal not allow globbing in c-sources?
  c-sources:
    src/cbits/leveldb/db/builder.cc
    src/cbits/leveldb/db/c.cc
    src/cbits/leveldb/db/db_bench.cc
    src/cbits/leveldb/db/db_impl.cc
    src/cbits/leveldb/db/db_iter.cc
    src/cbits/leveldb/db/dbformat.cc
    src/cbits/leveldb/db/filename.cc
    src/cbits/leveldb/db/log_reader.cc
    src/cbits/leveldb/db/log_writer.cc
    src/cbits/leveldb/db/memtable.cc
    src/cbits/leveldb/db/repair.cc
    src/cbits/leveldb/db/table_cache.cc
    src/cbits/leveldb/db/version_edit.cc
    src/cbits/leveldb/db/version_set.cc
    src/cbits/leveldb/db/write_batch.cc
    src/cbits/leveldb/port/port_posix.cc
    src/cbits/leveldb/table/block.cc
    src/cbits/leveldb/table/block_builder.cc
    src/cbits/leveldb/table/format.cc
    src/cbits/leveldb/table/iterator.cc
    src/cbits/leveldb/table/merger.cc
    src/cbits/leveldb/table/table.cc
    src/cbits/leveldb/table/table_builder.cc
    src/cbits/leveldb/table/two_level_iterator.cc
    src/cbits/leveldb/util/arena.cc
    src/cbits/leveldb/util/cache.cc
    src/cbits/leveldb/util/coding.cc
    src/cbits/leveldb/util/comparator.cc
    src/cbits/leveldb/util/crc32c.cc
    src/cbits/leveldb/util/env.cc
    src/cbits/leveldb/util/env_posix.cc
    src/cbits/leveldb/util/hash.cc
    src/cbits/leveldb/util/histogram.cc
    src/cbits/leveldb/util/logging.cc
    src/cbits/leveldb/util/options.cc
    src/cbits/leveldb/util/status.cc

  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs -Werror
  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    QuickCheck     == 2.4.*,
    test-framework == 0.4.*,
    test-framework-quickcheck2 == 0.2.*,
    leveldb

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010
